--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Game</title>
+    <title>Family Feud Game</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -19,14 +19,24 @@
 
     <button id="startGame">START GAME</button>
 
+    <div id="countdownTimer" style="display: none; font-size: 24px">
+      Starting in <span id="countdown">3</span> seconds...
+    </div>
+
     <div class="question-section">
       <h2 id="question"></h2>
+      <progress
+        id="timeProgress"
+        value="0"
+        max="15"
+        style="display: none"
+      ></progress>
+      <div id="timer" style="display: none; font-size: 24px">
+        Time left: 15 seconds
+      </div>
     </div>
 
     <button id="buzzer">BUZZER</button>
-    <div id="timer" style="display: none; font-size: 24px">
-      Time left: 15 seconds
-    </div>
 
     <div id="answerPopup" class="popup">
       <p>Who will answer?</p>
@@ -51,7 +61,7 @@
     </div>
 
     <a href="leaderboard.php" class="leaderboard-link">View Leaderboard</a>
-    
+
     <script src="game.js"></script>
   </body>
 </html>
